# executorch_native

./: .gitignore  CLAUDE.md  CMakeLists.txt  Dockerfile.test  LICENSE  README.md  THIRD_PARTY_LICENSES
.github/workflows/: README.md  build-android.yaml  build-apple.yaml  build-linux.yaml  build-windows.yaml  release.yaml  size-comparison.yaml
cmake/: build_from_source.cmake  download_prebuilt.cmake
scripts/: analyze-sizes.py  build-android.sh  build-ios.sh  build-linux.sh  build-macos.sh  build-windows.ps1  compile-local.sh
src/: executorch_ffi.cpp  executorch_ffi.h  executorch_llm_ffi.cpp  executorch_llm_ffi.h
test/: llm_harness.cpp
